--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -1,31 +1,31 @@
-resources:
-  one:
-    type: postgres
-  postgresdb:
-    type: postgres
-  rediscache:
-    type: redis
-  memcache:
-    type: memcached
-    options:
-      version: 1.6.17
-  mysqldb:
-    type: mysql
-    options:
-      version: 8.0.30
-  mariadb:
-    type: mariadb
+# resources:
+#   one:
+#     type: postgres
+#   postgresdb:
+#     type: postgres
+#   rediscache:
+#     type: redis
+#   memcache:
+#     type: memcached
+#     options:
+#       version: 1.6.17
+#   mysqldb:
+#     type: mysql
+#     options:
+#       version: 8.0.30
+#   mariadb:
+#     type: mariadb
 services:
   web:
     build: .
     port: 80
-    resources:
-      - postgresdb:DB_URL
-      - rediscache:REDIS_URL
-      - memcache:MEMCACHE_URL
-      - mysqldb:MYSQL_URL
-      - mariadb:MARIA_URL
-      - one
+    # resources:
+    #   - postgresdb:DB_URL
+    #   - rediscache:REDIS_URL
+    #   - memcache:MEMCACHE_URL
+    #   - mysqldb:MYSQL_URL
+    #   - mariadb:MARIA_URL
+    #   - one
 # timers:
 #   example:
 #     command: /usr/scripts/timer_cmd.sh
