--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -26,18 +26,18 @@ services:
       - mysqldb:MYSQL_URL
       - mariadb:MARIA_URL
       - one
-# timers:
-#   example:
-#     command: /usr/scripts/timer_cmd.sh
-#     schedule: "* * * * *"
-#     service: web
-#   concurrencyallowed:
-#     command: /usr/scripts/timer_long_cmd.sh
-#     schedule: "* * * * *"
-#     service: web
-#     concurrency: allow
-#   concurrencyforbid:
-#     command: /usr/scripts/timer_long_cmd.sh
-#     schedule: "* * * * *"
-#     service: web
-#     concurrency: forbid
+timers:
+  example:
+    command: /usr/scripts/timer_cmd.sh
+    schedule: "* * * * *"
+    service: web
+  concurrencyallowed:
+    command: /usr/scripts/timer_long_cmd.sh
+    schedule: "* * * * *"
+    service: web
+    concurrency: allow
+  concurrencyforbid:
+    command: /usr/scripts/timer_long_cmd.sh
+    schedule: "* * * * *"
+    service: web
+    concurrency: forbid
