Comment some tests

--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -1,22 +1,22 @@
-resources:
-  one:
-    type: postgres
-  my-db:
-    type: postgres
-  postgresdb:
-    type: postgres
-  rediscache:
-    type: redis
-  memcache:
-    type: memcached
-    options:
-      version: 1.6.17
-  mysqldb:
-    type: mysql
-    options:
-      version: 8.0.30
-  mariadb:
-    type: mariadb
+# resources:
+#   one:
+#     type: postgres
+#   my-db:
+#     type: postgres
+#   postgresdb:
+#     type: postgres
+#   rediscache:
+#     type: redis
+#   memcache:
+#     type: memcached
+#     options:
+#       version: 1.6.17
+#   mysqldb:
+#     type: mysql
+#     options:
+#       version: 8.0.30
+#   mariadb:
+#     type: mariadb
 services:
   web:
     build: .
