--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -28,7 +28,7 @@ services:
       - mysqldb:MYSQL_URL
       - mariadb:MARIA_URL
       - one
-      - my-db
+      - my-db:CUSTOM_DATABASE
 timers:
   example:
     command: /usr/scripts/timer_cmd.sh
