--- a/examples/httpd/convox-export.yml
+++ b/examples/httpd/convox-export.yml
@@ -5,8 +5,8 @@ services:
   web:
     build: .
     port: 80
-# timers:
-#   example:
-#     command: /usr/scripts/timer_cmd.sh
-#     schedule: "* 10 * * *"
-#     service: web
+timers:
+  example:
+    command: /usr/scripts/timer_cmd.sh
+    schedule: "* 10 * * *"
+    service: web
