change gcp region for e2e test

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -233,6 +233,7 @@ jobs:
             provider: do
           - job: gcp
             provider: gcp
+            rack_params: "region=us-west1"
           # - job: azure
           #   provider: azure
     steps:
