Add support internal nginx for internal rack to rack communication

--- a/pkg/manifest/testdata/validate.yml
+++ b/pkg/manifest/testdata/validate.yml
@@ -17,6 +17,9 @@ services:
     deployment:
       minimum: 101
       maximum: 201
+  internal-router-invalid:
+    internal: true
+    internalRouter: true
   serviceF:
     build: .
     resources:
