Update hashicorp/kubernetes version

--- a/terraform/fluentd/k8s/containers.conf
+++ b/terraform/fluentd/k8s/containers.conf
@@ -77,14 +77,14 @@
 </label>
 
 <label @rack>
-	# <filter **>
-	# 	@type concat
-	# 	key log
-	# 	multiline_start_regexp /^\S/
-	# 	separator ""
-	# 	flush_interval 5
-	# 	timeout_label @target
-	# </filter>
+    <filter **>
+      @type record_modifier
+      <record>
+        type  k8s
+        log ${record["message"]}
+      </record>
+      remove_keys message
+    </filter>
 
 	<match **>
 		@type relabel
