Add nginx access logs support

--- a/terraform/fluentd/k8s/containers.conf
+++ b/terraform/fluentd/k8s/containers.conf
@@ -86,6 +86,14 @@
       remove_keys message
     </filter>
 
+    <filter **>
+      @type grep
+      <exclude>
+        key "log"
+        pattern ^$
+      </exclude>
+    </filter>
+
 	<match **>
 		@type relabel
 		@label @target
